--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "discord-minecraft-bot",
+  "name": "minecraft-discord-bot",
   "version": "1.0.0",
-  "description": "Discord üzerinden Minecraft sunucularına bağlanan bot",
+  "description": "Minecraft ve Discord arasında entegrasyon sağlayan bir bot.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node ."
   },
+  "keywords": ["discord", "minecraft", "bot"],
+  "author": "Your Name",
+  "license": "ISC",
   "dependencies": {
-    "discord.js": "^14.0.0",
-    "mineflayer": "^4.5.0",
-    "express": "^4.18.2"
+    "discord.js": "^14.11.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mineflayer": "^4.4.0"
   }
 }
