--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "minecraft-discord-bot",
   "version": "1.0.0",
-  "description": "Minecraft ve Discord arasında entegrasyon sağlayan bir bot.",
+  "description": "Minecraft botlarını Discord üzerinden kontrol etmeye yarayan bot.",
   "main": "index.js",
   "scripts": {
-    "start": "node ."
+    "start": "node index.js"
   },
-  "keywords": ["discord", "minecraft", "bot"],
-  "author": "Your Name",
-  "license": "ISC",
   "dependencies": {
     "discord.js": "^14.11.0",
-    "dotenv": "^16.0.3",
+    "mineflayer": "^3.4.0",
     "express": "^4.18.2",
-    "mineflayer": "^4.4.0"
-  }
+    "dotenv": "^16.0.3",
+    "readline": "^1.3.0"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "author": "Your Name",
+  "license": "MIT"
 }
